macviews: don't wrap menu selection with arrow keys

This change causes arrowing upwards at the top of a menu, or arrowing downward
at the bottom of the menu, not to wrap around on Mac. It also adds a test
for this behavior.

This also moves and documents a helper in MenuConfig.

Bug: 837229
Change-Id: Iad73206dcede3a742242754801588e6d6a96c18b
Reviewed-on: https://chromium-review.googlesource.com/1038323
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556579}
Former-commit-id: 7c51ff6498075dcc21e6d8b400eb69c67a9264ec